# qserv

./: .code-workspace  .codeclimate.yml  .gitignore  .gitmodules  .landscape.yml  .travis.yml  CMakeLists.txt  Dockerfile  HELP-netdown.txt  README-devel.rst  README-devel.txt  README.md  README.rst  README.txt  RELEASE-NOTES.txt  SConscript.lib  SConscript.udf  SConstruct  SConstruct.configure  TODO  TODO.check  TODO.org  UserManual.md  custom.example.py  custom.py  example.custom.py  fjammes-env-build.sh  install.sh  mypy.ini  publish-release.sh  pyproject.toml  qserv-build.conf.example  qserv-build.default.conf  qserv-build.example.conf  qserv-env.example.sh  qserv-install-params.example.sh  setup.cfg  test-DM-854.sh  tools.sh  tox.ini
core/: scons.sh  (+4 more)
doc/: CMakeLists.txt  Makefile  RELEASE-NOTES.txt  SConscript  UserManual.md  acknowledgement.rst  build.sh  component_interaction.odg  conf.py  conf.py.in  documenteer.toml  doxygen.conf  index.rst  publish.sh  requirements.txt
doc/HOW-TO/: docker-build.rst  index.rst
doc/_static/: ingest-options.pptx  ingest-table-types.pptx  ingest-trans-multiple.pptx  ingest-transaction-fsm.pptx  ingest-transactions-aborted.pptx  ingest-transactions-failed.pptx  ingest-transactions-resolved.pptx
doc/_templates/: layout.html
doc/admin/: admin-upgrade.rst  configuration.rst  data-table-indexes.rst  director-index.rst  docker.rst  gb-sized-integration-test.rst  index.rst  k8s.rst  query-scan-params.rst  row-counters.rst  test-set.rst
doc/cmake/: FindSphinx.cmake
doc/dev/: bisect.rst  build-partition-without-eups.rst  css.rst  doc.rst  index.rst  quick-start-devel.rst  scisql.rst  scons-targets.rst
doc/devel/: build-partition-without-eups.rst  doc.rst  index.rst  quick-start-devel.rst  wmgr-api.rst
doc/ingest/: index.rst  intro.rst
doc/install/: docker.rst  index.rst
doc/misc/: KNOWN-ISSUES.txt  README.md  Scheduler-Foreman-rationale-tkt1863.txt  installation.trac  overview.tex  proto-czarHandlesWorkerResponse.gv  proto-workerSendsResponse.gv
doc/reference/: contents.rst  glossary.rst
doc/source/: conf.py  index.rst  quick-start-devel.rst  quick-start.rst  toplevel.rst
doc/templates/: overview.html
doc/user/: async.rst  http-frontend-general.rst  http-frontend-ingest.rst  http-frontend-query.rst  http-frontend.rst  index.rst  sql.rst
python/: CMakeLists.txt
src/: .clang-format  AggregateMgr.cc  AsyncQueryManager.cc  Base.cc  CMakeLists.txt  ChunkMapping.cc  ChunkQuery.cc  Config.cc  DmlSQL2.g  DmlSQL2ImpTokenTypes.txt  MmapFile.cc  MySqlFs.cc  MySqlFsCommon.cc  MySqlFsDirectory.cc  MySqlFsFile.cc  PacketIter.cc  QueryRunner.cc  SConscript  SConscript.lib  SpatialUdfHandler.cc  SqlFragmenter.cc  SqlInsertIter.cc  SqlParseRunner.cc  SqlSQL2.g  SqlSQL2ImpTokenTypes.txt  SqlSubstitution.cc  Substitution.cc  TableMerger.cc  Templater.cc  Thread.cc  Timer.cc  WorkQueue.cc  dbgParse.cc  dispatcher.cc  parseHandlers.cc  parseTreeUtil.cc  parser.cc  parserBase.h  runTransactions.cc  sql.cc  (+5 more)
src/admin/: CMakeLists.txt  README.txt
src/cconfig/: CMakeLists.txt  CzarConfig.cc  CzarConfig.h
src/ccontrol/: CMakeLists.txt  Callback.h  ConfigError.h  ConfigMap.h  MergingHandler.cc  MergingHandler.h  MissingUserQuery.h  ParseAdapters.cc  ParseAdapters.h  ParseAdaptersCBH.h  ParseHelpers.h  ParseListener.cc  ParseListener.h  ParseRunner.cc  ParseRunner.h  QueryState.cc  QueryState.h  SessionManager.h  TmpTableName.h  UserQuery.h  UserQueryAsyncResult.cc  UserQueryAsyncResult.h  UserQueryDrop.cc  UserQueryDrop.h  UserQueryError.h  UserQueryFactory.cc  UserQueryFactory.h  UserQueryFlushChunksCache.cc  UserQueryFlushChunksCache.h  UserQueryInvalid.h  UserQueryProcessList.cc  UserQueryProcessList.h  UserQueryQservManager.cc  UserQueryQservManager.h  UserQueryQueries.cc  UserQueryQueries.h  UserQueryResources.cc  UserQueryResources.h  UserQueryResultDelete.cc  UserQueryResultDelete.h  (+12 more)
src/css/: CMakeLists.txt  CssAccess.cc  CssAccess.h  CssConfig.cc  CssConfig.h  CssError.h  DbInterfaceMySql.cc  DbInterfaceMySql.h  EmptyChunks.cc  EmptyChunks.h  KvInterface.h  KvInterfaceImplMem.cc  KvInterfaceImplMem.h  KvInterfaceImplMySql.cc  KvInterfaceImplMySql.h  MatchTableParams.h  NodeParams.h  PartTableParams.h  SConscript  ScanTableParams.h  StripingParams.h  TableParams.h  constants.h  cssPythonWrapper.cc  testCssAccess.cc  testEmptyChunks.cc  testKvInterfaceImpl.cc  testKvInterfaceImplMySql.cc
src/czar/: ActiveWorker.cc  ActiveWorker.h  CMakeLists.txt  ChttpModule.cc  ChttpModule.h  Czar.cc  Czar.h  CzarChunkMap.cc  CzarChunkMap.h  CzarConfig.cc  CzarConfig.h  CzarErrors.h  CzarFamilyMap.cc  CzarFamilyMap.h  CzarRegistry.cc  CzarRegistry.h  CzarThreads.cc  CzarThreads.h  HttpCzarIngestCsvModule.cc  HttpCzarIngestCsvModule.h  HttpCzarIngestModule.cc  HttpCzarIngestModule.h  HttpCzarIngestModuleBase.cc  HttpCzarIngestModuleBase.h  HttpCzarQueryModule.cc  HttpCzarQueryModule.h  HttpCzarSvc.cc  HttpCzarSvc.h  HttpCzarWorkerModule.cc  HttpCzarWorkerModule.h  HttpModule.cc  HttpModule.h  HttpMonitorModule.cc  HttpMonitorModule.h  HttpSvc.cc  HttpSvc.h  MessageTable.cc  MessageTable.h  QhttpModule.cc  QhttpModule.h  (+5 more)
src/czar2/: CMakeLists.txt  ChttpModule.cc  ChttpModule.h  Czar.cc  Czar.h  CzarErrors.h  CzarThreads.cc  CzarThreads.h  HttpCzarIngestCsvModule.cc  HttpCzarIngestCsvModule.h  HttpCzarIngestModule.cc  HttpCzarIngestModule.h  HttpCzarIngestModuleBase.cc  HttpCzarIngestModuleBase.h  HttpCzarQueryModule.cc  HttpCzarQueryModule.h  HttpCzarSvc.cc  HttpCzarSvc.h  HttpMonitorModule.cc  HttpMonitorModule.h  HttpSvc.cc  HttpSvc.h  MessageTable.cc  MessageTable.h  QhttpModule.cc  QhttpModule.h  SubmitResult.h  WorkerIngestProcessor.cc  WorkerIngestProcessor.h  qserv-czar2-http.cc
src/global/: Bug.cc  Bug.h  CMakeLists.txt  ConfigError.h  DbTable.cc  DbTable.h  LogContext.h  MsgReceiver.h  ResourceUnit.cc  ResourceUnit.h  UberJobBase.cc  UberJobBase.h  UnsupportedError.h  clock_defs.h  constants.h  debugUtil.cc  debugUtil.h  intTypes.h  sqltoken.cc  sqltoken.h  stringTypes.h  stringUtil.cc  stringUtil.h  testResourceUnit.cc  testStringUtil.cc
(+6221 files in other folders)
