install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/python/ DESTINATION ${CMAKE_INSTALL_PREFIX}/python/lsst/qserv/admin)
install(FILES bin/entrypoint DESTINATION ${CMAKE_INSTALL_BINDIR} PERMISSIONS OWNER_READ WORLD_READ WORLD_EXECUTE)
install(DIRECTORY schema/ DESTINATION ${CMAKE_INSTALL_PREFIX}/qserv/smig/admin/schema/)
install(DIRECTORY etc/ DESTINATION ${CMAKE_INSTALL_PREFIX}/etc FILE_PERMISSIONS OWNER_READ OWNER_WRITE WORLD_READ WORLD_WRITE)
install(DIRECTORY templates/ DESTINATION ${CMAKE_INSTALL_PREFIX}/qserv/templates USE_SOURCE_PERMISSIONS)
